app/src/test/resources/programs/valid/loops/LoopsIterateProperly.exe
foo main() -> Int = {
    // The value of x at the end should be 10
    let mut x: Int = 0;
    loop {
        if (x < 10) then {
            x = x + 1
        }
        else
            break x;
    }
}