app/src/test/resources/programs/invalid/loops/MultipleLoopsWithSameLabel.exe
foo main() -> Int = {
    loop@firstLoop {
        loop@firstLoop {
            // Muliple loops with the same label
            break@firstLoop 1;
        }
    }
}